# Equity-research

./: .gitignore  README.md  app.py  requirements.txt
equity_app/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
equity_app/.streamlit/: config.toml
equity_app/analysis/: __init__.py  ai_narrative.py  ai_thesis_prompt.py  alert_checker.py  assumptions.py  balance_sheet_quality.py  bank_analysis.py  bank_detector.py  benchmark_engine.py  capital_allocation.py  damodaran_loader.py  data_adapter.py  data_quality.py  discount_builder.py  dividend_safety.py  earnings_quality.py  earnings_track_record.py  earnings_volatility.py  etf_analysis.py  etf_detector.py  etf_simple.py  financial_forecast.py  financial_statements.py  forensics.py  fundamentals_check.py  industry_classifier.py  industry_mapper.py  insider_analysis.py  institutional_analysis.py  insurance_analysis.py  koller_reorg.py  learn_content.py  lifecycle_classifier.py  macro_dashboard.py  news_aggregator.py  news_sentiment.py  parallel_loader.py  peer_ranking.py  quality.py  quality_checklist.py  (+13 more)
equity_app/core/: account_labels.py  api_usage.py  config.py  constants.py  exceptions.py  formatters.py  logging.py  provider_status.py  valuation_pipeline.py
equity_app/data/: _retry_policy.py  argentina_equities.py  base.py  cache.py  company_catalog.py  company_profiles.py  constituents.py  discount_data.py  discount_snapshot.json  edgar_provider.py  finnhub_provider.py  finviz_provider.py  fmp_provider.py  fred_provider.py  fx_rates.py  industry_benchmarks.py  market_data.py  marketaux_provider.py  peer_resolver.py  popular_lists.py  portfolio_presets.py  rate_limiter.py  regions.py  sector_specific_concepts.py  snapshot_db.py  ticker_classifier.py  ticker_universe.py  user_assumptions_db.py  watchlist_alerts_db.py  watchlist_db.py
equity_app/exports/: __init__.py  excel_export.py  pdf_report.py
equity_app/pages/: 0_📊_Markets.py  1_🔎_Equity_Analysis.py  2_📈_Portfolio.py  3_⚖_Compare.py  4_💵_Money_Flow.py  5_📰_News.py  6_💰_Discount.py  7_🔋_API_Usage.py  8_📅_Calendar.py  9_📚_Academy.py
equity_app/portfolio/: var_calculator.py
equity_app/scoring/: __init__.py  rating.py  scorer.py
equity_app/scripts/: _scaffold.py  build_discount_snapshot.py  load_damodaran_data.py  measure_perf.py  precompute_sectors.py  seed_watchlist.py  verify_universal_fixes.py
equity_app/tests/: conftest.py  test_bank_detector.py  test_comparables.py  test_data_quality.py  test_dcf.py  test_earnings_quality.py  test_etf_detector.py  test_financial_forecast.py  test_finviz_provider.py  test_fmp_provider.py  test_fundamentals_check.py  test_monte_carlo.py  test_multi_multiple.py  test_portfolio.py  test_provider_chain.py  test_ratios.py  test_reit_detector.py  test_ticker_not_found.py  test_ui_imports.py  test_wacc.py  test_working_capital_chart.py
equity_app/ui/: styles.py  theme.py
equity_app/utils/: api_logger.py  health_check.py
equity_app/valuation/: comparables.py  dcf_three_stage.py  ddm.py  epv.py  fundamental_growth.py  monte_carlo.py  multi_multiple.py  multiples_valuation.py  residual_income.py  reverse_dcf.py  (+1 more)
(+136 files in other folders)
